# GM_HK

./: CMakeLists.txt  README.md
data/: data1.txt
include/: BSplineCurve.hpp  CurveApproximation.hpp
src/: BSplineCurve.cpp  CurveApproximation.cpp
tests/: CMakeLists.txt  main.cpp  test.hpp
